--- a/package.json
+++ b/package.json
@@ -1,14 +1,44 @@
 {
   "name": "ai-monorepo",
   "version": "1.0.0",
-  "description": "Set up a Turborepo monorepo structure with AI",
+  "description": "AI-powered monorepo setup - Turborepo/Nx configuration with GPT optimization",
   "main": "dist/index.js",
-  "bin": { "ai-monorepo": "dist/cli.js" },
-  "scripts": { "build": "tsc" },
-  "keywords": ["monorepo","turborepo","ai","cli","scaffold","workspace"],
+  "bin": {
+    "ai-monorepo": "dist/cli.js"
+  },
+  "scripts": {
+    "build": "tsc"
+  },
+  "keywords": [
+    "ai",
+    "openai",
+    "gpt",
+    "monorepo",
+    "turborepo",
+    "nx",
+    "lerna",
+    "workspaces",
+    "developer-tools",
+    "cli",
+    "automation",
+    "typescript",
+    "nodejs",
+    "pnpm",
+    "yarn"
+  ],
   "license": "MIT",
-  "dependencies": { "commander": "^12.1.0", "openai": "^4.73.0", "ora": "^5.4.1" },
-  "devDependencies": { "typescript": "^5.6.0", "@types/node": "^22.0.0" },
+  "dependencies": {
+    "commander": "^12.1.0",
+    "openai": "^4.73.0",
+    "ora": "^5.4.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.0",
+    "@types/node": "^22.0.0"
+  },
   "author": "LXGIC Studios",
-  "repository": { "type": "git", "url": "https://github.com/LXGIC-Studios/ai-monorepo" }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LXGIC-Studios/ai-monorepo"
+  }
 }
